Correct spacing between components

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -45,4 +45,5 @@
 .homeRecentPosts{
   min-height: 35vh;
   width: 100%;
+  margin-top: 45px;
 }
